--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.restfb</groupId>
-  <artifactId>restfb</artifactId>
+  <artifactId>ru.ac.uniyar.ashumanov1</artifactId>
   <packaging>jar</packaging>
   <name>RestFB</name>
   <version>3.0.0</version>
@@ -408,4 +408,10 @@
       </build>
     </profile>
   </profiles>
+  <distributionManagement>
+    <site>
+      <id>www.restfb.com</id>
+      <url>scp://www.restfb.com/www/docs/project/</url>
+    </site>
+  </distributionManagement>
 </project>
