--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
       <id>sonatype-nexus-staging</id>
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
+    <site>
+      <id>www.ashumanov1.com</id>
+      <url>scp://www.ashumanov1.com/www/docs/project/</url>
+    </site>
   </distributionManagement>
 
   <developers>
@@ -408,10 +412,4 @@
       </build>
     </profile>
   </profiles>
-  <distributionManagement>
-    <site>
-      <id>www.restfb.com</id>
-      <url>scp://www.restfb.com/www/docs/project/</url>
-    </site>
-  </distributionManagement>
 </project>
